platform/observability/2-instances/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: grafana-system
  annotations:
    oatlabs.oatmilk.work/external-dns: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: gateway
      namespace: ${PLATFORM_NAMESPACE}
      sectionName: web-https
  hostnames:
    - grafana.${CLUSTER_ZONE}
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
